--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div id="petals"></div>
 
-	<div class="card">
+	<div class="card" id="card">
 		<div class="title" id="title"></div>
 		<div class="text" id="text"></div>
 		<div class="author" id="author">- твой IT отдел</div>
