--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 		<div class="title" id="title"></div>
 		<div class="text" id="text"></div>
 		<div class="author" id="author">- твой IT отдел</div>
+
+
+		<button id="next-button" class="button-53" role="button">К Подарку!!!</button>
 	</div>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 	<script src="js/typed.min.js"></script>
-	<script src="js/app.js"></script>
+	<script type="module" src="js/app.js"></script>
 
 </body>
 </html>
