--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-	<script src="js/typed.min.js"></script>
 	<script type="module" src="js/app.js"></script>
+	<script type="module" src="js/typed.min.js"></script>
 
 </body>
 </html>
