--- a/index.html
+++ b/index.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
-	<link rel="manifest" href="img/favicons/site.webmanifest">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
-	<title>С 8 марта!</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Caveat"
+      rel="stylesheet"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="img/favicons/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>С 8 марта!</title>
+  </head>
+  <body>
+    <div id="petals" ></div>
+        
+    <div class="card flipped" id="card">
+      <div class="content">
+        <div class="front">
+          <div class="title" id="title"></div>
+          <div class="text" id="text"></div>
+          <div class="author" id="author">- твой IT отдел</div>
 
-	<div id="petals"></div>
+          <button onclick="onNextBtnClick()" id="next-button" class="button-53" role="button">
+            К Подарку!!!
+          </button>
+        </div>
 
-	<div class="card" id="card">
-		<div class="title" id="title"></div>
-		<div class="text" id="text"></div>
-		<div class="author" id="author">- твой IT отдел</div>
+        <div class="back">
+            <div class="giftcard">
+                <span>
+                    Подарок ждите на СМС!
+                </span>
+            </div>
+            <button onclick="onBackBtnClick()" class="button-52" role="button">Назад</button>
+        </div>
+      </div>
+    </div>
 
-
-		<button id="next-button" class="button-53" role="button">К Подарку!!!</button>
-	</div>
-
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-	<script type="module" src="js/app.js"></script>
-
-</body>
+    <script>
+        const onNextBtnClick = () => {
+            const card = document.getElementById("card");
+            card.classList.add("flipped");
+        }
+        const onBackBtnClick = () => {
+            const card = document.getElementById("card");
+            card.classList.remove("flipped");
+        }
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+    <script type="module" src="js/app.js"></script>
+  </body>
 </html>
