--- a/index.html
+++ b/index.html
@@ -31,40 +31,49 @@
     <title>С 8 марта!</title>
   </head>
   <body>
-    <div id="petals" ></div>
-        
-    <div class="card flipped" id="card">
-      <div class="content">
-        <div class="front">
-          <div class="title" id="title"></div>
-          <div class="text" id="text"></div>
-          <div class="author" id="author">- твой IT отдел</div>
+    <div id="petals"></div>
 
-          <button onclick="onNextBtnClick()" id="next-button" class="button-53" role="button">
-            К Подарку!!!
-          </button>
-        </div>
+    <article class="megawrapper">
 
-        <div class="back">
+      <div class="card" id="card">
+        <div class="content">
+          <div class="front">
+            <div class="title" id="title"></div>
+            <div class="text" id="text"></div>
+            <div class="author" id="author">- твой IT отдел</div>
+
+            <button
+              onclick="onNextBtnClick()"
+              id="next-button"
+              class="button-53"
+              role="button"
+            >
+              К Подарку!!!
+            </button>
+          </div>
+
+          <div class="back">
             <div class="giftcard">
-                <span>
-                    Подарок ждите на СМС!
-                </span>
+              <span> Подарок жди на СМС! </span>
             </div>
-            <button onclick="onBackBtnClick()" class="button-52" role="button">Назад</button>
+            <button onclick="onBackBtnClick()" class="button-52" role="button">
+              Назад
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+
+    </article>
 
     <script>
-        const onNextBtnClick = () => {
-            const card = document.getElementById("card");
-            card.classList.add("flipped");
-        }
-        const onBackBtnClick = () => {
-            const card = document.getElementById("card");
-            card.classList.remove("flipped");
-        }
+      const onNextBtnClick = () => {
+        const card = document.getElementById("card");
+        card.classList.add("flipped");
+      };
+      const onBackBtnClick = () => {
+        const card = document.getElementById("card");
+        card.classList.remove("flipped");
+      };
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <script type="module" src="js/app.js"></script>
